Redesign status line modification (#67)
* Redesign modifications with branch status (#67)

Signed-off-by: Slimane AMAR <slimane.amar@rte-france.com>

* Remove unused attribute variantId in the listener (#67)

Signed-off-by: Slimane AMAR <slimane.amar@rte-france.com>

* Remove the 'addSubstationsIds' method not necessary in the listener (#67)

Signed-off-by: Slimane AMAR <slimane.amar@rte-france.com>

* Add a 'modification' java package for entities and add equipment id for branch status modification (#67)

Signed-off-by: Slimane AMAR <slimane.amar@rte-france.com>

* Add a unit test for BranchStatusModification (#67)

Signed-off-by: Slimane AMAR <slimane.amar@rte-france.com>

* Add BranchStatusModification in the network variant build (#67)

Signed-off-by: Slimane AMAR <slimane.amar@rte-france.com>

* Review remarks (#67)

Signed-off-by: Slimane AMAR <slimane.amar@rte-france.com>